--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-fileupload": "^1.3.1",
     "express-handlebars": "^6.0.2",
     "express-hbs": "^2.4.0",
+    "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "js-alert": "^1.0.4",
